2017-12-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Util.swg (is_pid_alive): Use kill instead of
	  Amanda::Process

2017-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amfeatures.c: Add fe_sendbackup_statedone
	* common-src/amfeatures.h: Add fe_sendbackup_statedone
	* amandad-src/amandad.c, client-src/sendbackup.c,
	  server-src/dumper.c: Fix for directtcp data_path

2017-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Accept define with double quote

2017-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Scribe.pm: Fix perl warning on taper failure

2017-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Label.pm: Fix error message
	* installcheck/amlabel.pl: Fix

2017-12-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Also use 'driver: pid' line to detect
	  running version
	* server-src/amstatus.pl: Fix perl warning
	* installcheck/Installcheck/Catalogs.pm: Fix

2017-12-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c (get_errno_string, get_errno_number): New
	  functions toreturn errno string and number
	* common-src/ammessage.h: Add prototypes
	* common-src/ambind.c: Print the errno_string in error message
	* common-src/amutil.c: Parse errno string is ambind error message and
	  set errno

2017-12-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Archive.pl: Fix parameter order

2017-12-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Archive.swg (read_finish_file_cb): Fix parameter order

2017-11-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: Accept --target asa synonyme for
	  --directory

2017-11-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.5.1
	* VERSION: 3.5.1

2017-11-28  Jean-Louis Martineau <JMartineau@carbonite.com>